*svn*

- Added left-handed option
- Made bass sounds a bit louder - however, it' still too weak. We'll it better later.
- Added "Edit Fretboard" setting that where you can adjust the distance between frets, the size of the fretboard and the position of strings.
- The settings are now stored into disk.
- Re-implemented exctracted_samples script in C so that it no longer requires BSD subsystem.

*0.1* (2008-01-19)

- Initial release.