@@ -1,5 +1,5 @@
 #import "GuitarApp.h"
-#include "MobileMusicPlayer/MobileMusicPlayer.h"
+#import "AudioOutput.h"
 
 id GSColorCreateWithDeviceWhite(float f1, float f2);
 
@@ -22,30 +22,7 @@ id GSFontCreateWithName(char *name, GSFontTrait traits, float size);
     [window setContentView:mainView];
     [mainView setBackgroundColor:(CGColorRef)[(id)GSColorCreateWithDeviceWhite(0.0, 1.0) autorelease]];
 
-	AVSystemController *avsc = [AVSystemController sharedAVSystemController];
-	float volume;
-	NSString *name;
-	[avsc getActiveCategoryVolume:&volume andName:&name];
-	NSLog(@"volume=%f name=%@", volume, name);
-	NSLog(@"route=%@", [avsc routeForCategory:@"Audio/Video"]);
-	
-	int playbackState = PCGetPlaybackState();
-	NSLog(@"state=%d", playbackState);
-
-	if (kPlayerPlaying != playbackState) {
-		[avsc setActiveCategoryVolumeTo:0.6];
-		AVController *avc = [AVController avController];
-		NSError *error;
-		AVItem *silence = [[AVItem alloc] initWithPath:[[NSBundle mainBundle] pathForResource:@"silence" ofType:@"wav"] error:&error];
-		[avc setCurrentItem:silence preservingRate:NO];
-		[avc setCurrentTime:0.0];
-		[avc play:nil];
-		[avc pause];
-//		[avc release];
-/*	[avc setVolume:0.8];
-//	[avc pause];
-*/
-	}
+	[AudioOutput initSystemVolume];
 	
 	transition = [[UITransitionView alloc] initWithFrame:[window bounds]];
 	[mainView addSubview: transition];	
@@ -71,6 +48,7 @@ id GSFontCreateWithName(char *name, GSFontTrait traits, float size);
 }
 
 - (void)showSettings {
+	[settingsView reload];
 	[transition transition:1 fromView:guitarView toView:settingsView];
 	[settingsView setNeedsDisplay];
 }
