@@ -1,10 +1,11 @@
 *svn*
 
+- Don't change system volume on startup
 - Added left-handed option
-- Made bass sounds a bit louder - however, it' still too weak. We'll it better later.
+- Made bass sounds a bit louder - still weak though.
 - Added "Edit Fretboard" setting that where you can adjust the distance between frets, the size of the fretboard and the position of strings.
 - The settings are now stored into disk.
-- Re-implemented exctracted_samples script in C so that it no longer requires BSD subsystem.
+- Re-implemented exctract_samples script in C so that it no longer requires BSD subsystem.
 
 *0.1* (2008-01-19)
 
